feature: Add new functionality to AI service